# pico_midi_library

./: CMakeLists.txt
src/: CMakeLists.txt  USB-MIDI.h  USB-MIDI_Namespace.h  USB-MIDI_defs.h  serialMIDI.h
